# Backend/internal/handler/authHandler.go
@@ -13,6 +13,7 @@ import (
 type IAuthHandler interface {
 	Login(c *gin.Context)
 	Profile(c *gin.Context)
+	Logout(c *gin.Context)
 }
 
 type AuthHandler struct {
@@ -36,17 +37,21 @@ func NewAuthHandler(authService service.IAuthService) IAuthHandler {
 // @Router /login [post]
 func (a AuthHandler) Login(c *gin.Context) {
 	var loginData models.LoginRequest
+
 	if err := c.ShouldBindJSON(&loginData); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid request"})
+		c.JSON(http.StatusBadRequest, models.ErrorResponse{Error: "Invalid request"})
 		return
 	}
 	tokenString, err := a.AuthService.Login(loginData)
 	if err != nil {
-		c.JSON(http.StatusUnauthorized, gin.H{"error": "Unauthorized"})
+		c.JSON(http.StatusUnauthorized, models.ErrorResponse{Error: "Unauthorized"})
 		return
 	}
 
 	domain := os.Getenv("COOKIE_DOMAIN")
+	if domain == "" {
+		domain = "localhost"
+	}
 
 	c.SetCookie("jwt", tokenString, 3600, "/", domain, true, true)
 	c.JSON(http.StatusOK, gin.H{"message": "Successful"})
@@ -62,16 +67,31 @@ func (a AuthHandler) Login(c *gin.Context) {
 // @Failure 401 {object} map[string]interface{} "Unauthorized"
 // @Router /profile [get]
 func (a AuthHandler) Profile(c *gin.Context) {
-	// Extraer el username desde el contexto
 	username, exists := c.Get("username")
 	if !exists {
-		c.JSON(http.StatusUnauthorized, gin.H{"error": "Unauthorized"})
+		c.JSON(http.StatusUnauthorized, models.ErrorResponse{Error: "Unauthorized"})
 		return
 	}
 
-	// Devolver los datos del usuario (esto puede venir de una BD en un caso real)
 	c.JSON(http.StatusOK, gin.H{
 		"username": username,
 		"message":  "Authorized",
 	})
+}
+
+// Logout godoc
+// @Summary Logout user
+// @Description Clear the JWT cookie
+// @Tags auth
+// @Success 200 {object} map[string]string "message"
+// @Router /logout [post]
+func (a AuthHandler) Logout(c *gin.Context) {
+	domain := os.Getenv("COOKIE_DOMAIN")
+	if domain == "" {
+		domain = "localhost"
+	}
+
+	// Eliminar la cookie estableciendo su valor vacío y expirando inmediatamente
+	c.SetCookie("jwt", "", -1, "/", domain, true, true)
+	c.JSON(http.StatusOK, gin.H{"message": "Logged out successfully"})
 }
