# Backend/internal/models/responses.go
@@ -9,6 +9,9 @@ type ErrorResponse struct {
 }
 
 type UserResponse struct {
-	Message string `json:"message"`
-	User    User   `json:"user"`
+	Message  string `json:"message"`
+	Username string `json:"username"`
+	Name     string `json:"name"`
+	Email    string `json:"email"`
+	Level    int    `json:"level"`
 }
